--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "keywords": [
     "infinitiBeat"
   ],
-  "author": "Chia Yu Pai",
-  "license": "MIT",
+  "author": ["The Yeoman Team", "Chia Yu Pai"],
+  "license": ["BSD", "MIT"],
   "bugs": {
     "url": "https://github.com/fantasywind/generator-IBSite/issues"
   },
