--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-angular-jscg",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Yeoman generator for AngularJS with Jade / Stylus / Coffeescript / Gulp / YUI Pure",
   "main": "index.js",
   "scripts": {
@@ -21,8 +21,8 @@
     "pure",
     "yeoman"
   ],
-  "author": ["Chia Yu Pai"],
-  "license": ["MIT"],
+  "author": "Chia Yu Pai",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/fantasywind/generator-angular-jscg/issues"
   },
